Update to Font Awesome 5

--- a/sass/edd/_edd.scss
+++ b/sass/edd/_edd.scss
@@ -281,7 +281,7 @@
 
 			&:after{
 				display: inline-block;
-				font: normal normal normal 14px/1 FontAwesome;
+				font: normal normal normal 14px/1 FontAwesome 5 Free;
 				text-rendering: auto;
 				-webkit-font-smoothing: antialiased;
 				-moz-osx-font-smoothing: grayscale;
