--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -116,7 +116,7 @@
 
 // Font Awesome CSS
 @mixin font-awesome() {
-    font-family: 'FontAwesome';
+    font-family: 'FontAwesome 5 Free';
     font-weight: normal;
     font-style: normal;
     letter-spacing: normal;
