--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -69,7 +69,7 @@ h6 {
 
     .text::before {
     	content: '\f105';
-    	font-family: 'FontAwesome';
+    	font-family: 'FontAwesome 5 Free';
     	font-size: 18px;
     	font-weight: 600;
     	color: $color-5;
