--- a/sass/components/_custom-selects.scss
+++ b/sass/components/_custom-selects.scss
@@ -14,7 +14,7 @@
     z-index: 1;
 
     &:after {
-        font-family: 'FontAwesome';
+        font-family: 'FontAwesome 5 Free';
         content: '\f107';
         position: absolute;
         right: 0;
