--- a/sass/woo/_woo-cat-widget.scss
+++ b/sass/woo/_woo-cat-widget.scss
@@ -120,7 +120,7 @@
 					text-align: center;
 				    content: '\f00c';
 				    color: #fff;
-				    font: normal normal normal 14px/1 FontAwesome;
+				    font: normal normal normal 14px/1 FontAwesome 5 Free;
 				    font-size: 10px;
 				    line-height: 10px;
 				    text-rendering: auto;
