--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -68,10 +68,10 @@ h6 {
     text-transform: uppercase;
 
     .text::before {
-    	content: '\f105';
-    	font-family: 'FontAwesome 5 Free';
+		font-family: "Font Awesome 5 Free";
+    	content: "\f105";
+		font-weight: 900;
     	font-size: 18px;
-    	font-weight: 600;
     	color: $color-5;
     	padding-right: 6px;
     }
