--- a/sass/components/mobile/_fullscreen-mobile.scss
+++ b/sass/components/mobile/_fullscreen-mobile.scss
@@ -95,7 +95,7 @@
 			    text-align: center;
 
                 &:before {
-                    font-family: 'FontAwesome';
+                    font-family: 'Font Awesome 5 Free';
                     content: '+';
                 }
             }
