--- a/sass/woo-quick-view.scss
+++ b/sass/woo-quick-view.scss
@@ -224,7 +224,7 @@ Woo Quick View
 
 		    &:before {
 			    display: inline-block;
-			    font: normal normal normal 30px/1 FontAwesome 5 Free;
+				font: normal normal 900 14px/1 'Font Awesome 5 Free';
 			    text-rendering: auto;
 			    -webkit-font-smoothing: antialiased;
 			    -moz-osx-font-smoothing: grayscale;
