--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -117,7 +117,7 @@
 // Font Awesome CSS
 @mixin font-awesome() {
     font-family: 'Font Awesome 5 Free';
-    font-weight: normal;
+    font-weight: 900;
     font-style: normal;
     letter-spacing: normal;
     text-rendering: auto;
