--- a/assets/css/learndash/learndash.css
+++ b/assets/css/learndash/learndash.css
@@ -86,19 +86,19 @@ a#quiz_continue_link:focus {
   top: 10px;
   right: 20px;
   display: inline-block;
-  font: normal normal normal 14px/1 'Font Awesome 5 Free';
+  font: normal normal 900 14px/1 'Font Awesome 5 Free';
   font-size: 20px;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  content: "\f05d";
+  content: "\f058";
   text-indent: 0;
   color: #068806;
 }
 
 .learndash .notcompleted:before,
 #learndash_profile .notcompleted:before {
-  content: "\f10c";
+  content: "\f111";
   color: #777;
 }
 
@@ -121,12 +121,12 @@ a#quiz_continue_link:focus {
 .learndash_topic_dots .topic-notcompleted span:before,
 .learndash_topic_dots ul .topic-completed span:before,
 .learndash_topic_dots ul .topic-notcompleted span:before {
-  font: normal normal normal 14px/1 'Font Awesome 5 Free';
+  font: normal normal 900 14px/1 'Font Awesome 5 Free';
   font-size: 20px;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  content: "\f05d";
+  content: "\f058";
   margin-right: 10px;
 }
 
@@ -175,7 +175,7 @@ a#quiz_continue_link:focus {
 
 #learndash_profile .list_arrow.collapse:before,
 #learndash_profile .list_arrow.expand:before {
-  font: normal normal normal 14px/1 'Font Awesome 5 Free';
+  font: normal normal 900 14px/1 'Font Awesome 5 Free';
   font-size: 20px;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
