--- a/sass/base/_form.scss
+++ b/sass/base/_form.scss
@@ -89,6 +89,7 @@ input[type=checkbox]:checked:before {
 	vertical-align: middle;
 	width: 16px;
 	line-height: 14px;
+	font-weight: 900;
 	font-family: 'Font Awesome 5 Free';
 	text-rendering: auto;
 	-webkit-font-smoothing: antialiased;
