--- a/sass/components/_custom-selects.scss
+++ b/sass/components/_custom-selects.scss
@@ -16,6 +16,7 @@
     &:after {
         font-family: 'Font Awesome 5 Free';
         content: '\f107';
+        font-weight: 900;
         position: absolute;
         right: 0;
         top: 0;
