--- a/sass/learndash/learndash.scss
+++ b/sass/learndash/learndash.scss
@@ -70,18 +70,18 @@ a#quiz_continue_link:focus{
 		top: 10px;
 		right: 20px;
 		display: inline-block;
-		font: normal normal normal 14px/1 'Font Awesome 5 Free';
+		font: normal normal 900 14px/1 'Font Awesome 5 Free';
 		font-size: 20px;
 		text-rendering: auto;
 		-webkit-font-smoothing: antialiased;
 		-moz-osx-font-smoothing: grayscale;
-		content: "\f05d";
+		content: "\f058";
 		text-indent: 0;
 		color: #068806;
 	}
 
 	.notcompleted:before{
-		content: "\f10c";
+		content: "\f111";
 		color: $color-15;
 	}
 }
@@ -97,12 +97,12 @@ a#quiz_continue_link:focus{
 	background: 0 0;
 
 	&:before{
-		font: normal normal normal 14px/1 'Font Awesome 5 Free';
+		font: normal normal 900 14px/1 'Font Awesome 5 Free';
 		font-size: 20px;
 		text-rendering: auto;
 		-webkit-font-smoothing: antialiased;
 		-moz-osx-font-smoothing: grayscale;
-		content: "\f05d";
+		content: "\f058";
 		margin-right: 10px;
 	}
 }
@@ -151,7 +151,7 @@ a#quiz_continue_link:focus{
 		color: $color-15;
 	
 		&:before{
-			font: normal normal normal 14px/1 'Font Awesome 5 Free';
+			font: normal normal 900 14px/1 'Font Awesome 5 Free';
 			font-size: 20px;
 			text-rendering: auto;
 			-webkit-font-smoothing: antialiased;
